--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
 
         <activity android:name=".JobActivity" >
 
+        </activity>
+        <activity android:name=".AsyncAwaitActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
