--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,17 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    /* Testing */
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.4'
+    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.assertj:assertj-core:3.8.0"
+
+    testImplementation "org.mockito:mockito-core:3.1.0"
+    testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0") {
+        exclude group: 'org.mockito'
+    }
 }
