--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,16 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    // to ensure Activity & Fragment add SavedState to ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.activity:activity:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.3'
+
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
