--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation 'junit:junit:4.12'
     testImplementation "org.assertj:assertj-core:3.16.1"
+    testImplementation 'app.cash.turbine:turbine:0.3.0'
 
     testImplementation "org.mockito:mockito-core:3.2.4"
     testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0") {
