--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     testImplementation "org.assertj:assertj-core:3.16.1"
     testImplementation 'app.cash.turbine:turbine:0.3.0'
     testImplementation 'io.kotest:kotest-assertions-core:4.3.2'
-
+    testImplementation "io.mockk:mockk:1.12.0"
     testImplementation "org.mockito:mockito-core:3.2.4"
     testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0") {
         exclude group: 'org.mockito'
